--- a/BACKEND/frontend/package.json
+++ b/BACKEND/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
